--- a/src/main/webapp/WEB-INF/views/add/addContact.html
+++ b/src/main/webapp/WEB-INF/views/add/addContact.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title>Справочник контактов</title>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
     <style type="text/css">
         #centerLayer {
             width: 400px; /* Ширина слоя в пикселах */
