поправил все замечания 1. Разнес контексты 2. Переименовал классы

--- a/src/main/webapp/WEB-INF/views/start-page/selection_page.html
+++ b/src/main/webapp/WEB-INF/views/start-page/selection_page.html
@@ -19,7 +19,7 @@
         <p><a href="/analyticalInf">Аналитическая информация</a></p>
         <p><a href="/addContact">Действие с контактом</a></p>
         <p><a href="/addGroup">Действие с группой</a></p>
-        <p><a href="/selection">Действие с users</a></p>
+        <p><a href="/listUsers">Действие с users</a></p>
         <p><a href="/startServlet">Выйти</a></p>
     </div>
 </div>
