--- a/src/main/webapp/WEB-INF/views/show_lists/get_contacts_group.html
+++ b/src/main/webapp/WEB-INF/views/show_lists/get_contacts_group.html
@@ -25,14 +25,16 @@
     </script>
 </head>
 <body>
+<h2>
 <div id="centerLayer">
     <form action="/getContactsGroup" method="POST" onsubmit="return validate();">
-        Название группы: <input type="text" name="gro" id="group" placeholder="Введите название"/><br/>
+        Название группы: <input type="text" name="gro" id="group" placeholder="Введите группу"/><br/>
         <p></p>
         <input type="submit" name="getContacts" value="SHOW CONTACTS" aria-controls="gfg"/><br/>
         <p></p>
         <p><a href="/addGroup">Назад</a></p>
     </form>
 </div>
+</h2>
 </body>
 </html>
