--- a/src/main/webapp/WEB-INF/views/start-page/selection_page.html
+++ b/src/main/webapp/WEB-INF/views/start-page/selection_page.html
@@ -14,14 +14,16 @@
     </style>
 </head>
 <body>
+<h2>
 <div id="centerLayer">
     <div class="" >
         <p><a href="/analyticalInf">Аналитическая информация</a></p>
         <p><a href="/addContact">Действие с контактом</a></p>
         <p><a href="/addGroup">Действие с группой</a></p>
         <p><a href="/listUsers">Действие с users</a></p>
-        <p><a href="/startServlet">Выйти</a></p>
+        <p><a href="/logout.jsp">Выйти</a></p>
     </div>
 </div>
+</h2>
 </body>
 </html>
