--- a/src/main/webapp/WEB-INF/views/start-page/selection_page.html
+++ b/src/main/webapp/WEB-INF/views/start-page/selection_page.html
@@ -5,7 +5,7 @@
     <title>Selection Page</title>
     <style type="text/css">
         #centerLayer {
-            width: 400px; /* Ширина слоя в пикселах */
+            width: 600px; /* Ширина слоя в пикселах */
             margin: 0 auto; /* Отступ слева и справа */
             background: #acff85; /* Цвет фона */
             padding: 10px; /* Поля вокруг текста */
@@ -17,11 +17,11 @@
 <h2>
 <div id="centerLayer">
     <div class="" >
-        <p><a href="/analyticalInf">Аналитическая информация</a></p>
+        <p><a href="/analyticalInf">Аналитическая информация (ROLE_ADMIN)</a></p>
         <p><a href="/addContact">Действие с контактом</a></p>
         <p><a href="/addGroup">Действие с группой</a></p>
-        <p><a href="/listUsers">Действие с users</a></p>
-        <p><a href="/logout.jsp">Выйти</a></p>
+        <p><a href="/listUsers">Действие с users (ROLE_ADMIN)</a></p>
+        <p><a href="/logout.jsp">Logout</a></p>
     </div>
 </div>
 </h2>
